add vote endpoint, update documentation
